# verifying-machine

./: MANIFEST.in  README.md  pyproject.toml
src/name_of_the_machine/: __init__.py  cli.py  config.py  githf.py  machina.yaml
src/name_of_the_machine/providers/: basta.py  camelids.py  castor_pollux.py  depsek.py  electroid.py  openai.py  qrog.py  strangelove.py
src/verifying_machine/: cli.py  config.py  githf.py  machina.yaml  machine.py  utilities.py
src/verifying_machine/providers/: camelids.py  castor_pollux.py  depsek.py  electroid.py  openai.py  qrog.py  strangelove.py
tests/: test_cli.py  test_e2e.py  test_llm_soup.py  test_utilities.py
tests/data/: cmj_example.json  cmj_shortened_example.json  mpuj_example.json  mpuj_shortened_example.json  muj_example.json  plato_example.txt  plato_html_example.html
