[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "verifying-machine"
version = "0.0.2"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "A Machine that verifies the results."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
keywords = ["verifying-machine"]
dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
verifying-machine = "verifying_machine.cli:run"

[project.urls]
"Homepage" = "https://github.com/verifying-machine/verifying-machine"

[dependency-groups]
dev = ["pytest>=8.0.0"]